DXPackage/QuotationPackage/objects/QuotationDemo__c.object
<CustomObject>
    <description>Created for DX Project</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_Method__c</fullName>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>Delivery Method</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_date__c</fullName>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>Expiration date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Limit__c</fullName>
        <label>Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_LoB_s_Won__c</fullName>
        <label>No. of LoB&apos;s Won</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quotation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Quotation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>